tests/baselines/reference/unusedLocalsAndObjectSpread2.errors.txt
tests/cases/compiler/unusedLocalsAndObjectSpread2.ts(4,5): error TS6133: 'children' is declared but never used.
tests/cases/compiler/unusedLocalsAndObjectSpread2.ts(5,13): error TS6133: '_a' is declared but never used.
tests/cases/compiler/unusedLocalsAndObjectSpread2.ts(6,6): error TS6133: 'rest' is declared but never used.
tests/cases/compiler/unusedLocalsAndObjectSpread2.ts(9,10): error TS6133: 'foo' is declared but never used.
tests/cases/compiler/unusedLocalsAndObjectSpread2.ts(13,8): error TS6133: 'rest' is declared but never used.


==== tests/cases/compiler/unusedLocalsAndObjectSpread2.ts (5 errors) ====
    
    declare let props: any;
    const {
        children, // here!
        ~~~~~~~~
!!! error TS6133: 'children' is declared but never used.
        active: _a, // here!
                ~~
!!! error TS6133: '_a' is declared but never used.
      ...rest,
         ~~~~
!!! error TS6133: 'rest' is declared but never used.
    } = props;
    
    function foo() {
             ~~~
!!! error TS6133: 'foo' is declared but never used.
        const {
            children,
            active: _a,
        ...rest,
           ~~~~
!!! error TS6133: 'rest' is declared but never used.
      } = props;
    }
    
    export const asdf = 123;